[tool.poetry]
name = "explore-search-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8.11"
numpy = "^1.21.2"
scikit-learn = "^0.24.2"
tqdm = "^4.62.2"
scipy = "^1.7.1"
pandas = "^1.3.2"
dash = "^1.21.0"
gunicorn = "^20.1.0"
joblib = "^1.0.1"
pip = "^21.2.4"
bs4 = "^0.0.1"
mecab-python3 = "^1.0.4"
unidic-lite = "^1.0.8"
mojimoji = "^0.0.11"
dash-bootstrap-components = "^0.13.0"
requests = "^2.26.0"
Pillow = "^8.3.2"
tldextract = "^3.1.2"
arxiv = "^1.4.2"
nltk = "^3.6.4"
tensorly = "^0.6.0"
jax = "^0.2.24"
jaxlib = "^0.1.73"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.1.11"
matplotlib = "^3.4.3"
japanize-matplotlib = "^1.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
